feat: new deployables and Deployable Display optimizations feat: Deployable Display only shows Totem of Corruption when used by player feat: DrawUtils#drawText legacy format to Component modernization fix: minor rendering bug about Vampire Slayer Tracker in Location Edit GUI fix: issues related to saving Discord RP custom status refactor: move NPCUtils to utils package chore: upgrade DiscordIPC and minor backports from 1.21.11 version